--- a/src/components/Shop/shop.module.scss
+++ b/src/components/Shop/shop.module.scss
@@ -6,6 +6,8 @@
   p {
     font-size: 1.1rem;
     width: 75%;
+    letter-spacing: .5px;
+    line-height: 1.6;
   }
 
   button {
@@ -15,8 +17,9 @@
     border: 2px solid $primary;
     padding: 1rem 2rem;
     cursor: pointer;
-    font-weight: 500;
     display: flex;
+    font-weight: 600;
+    letter-spacing: .5px;
     align-items: center;
     transition: .3s background-color;
     &:hover {
@@ -31,7 +34,7 @@
   }
 
   &:not(:last-of-type) {
-    border-bottom: 2px dotted $primary;
+    border-bottom: 2px dashed $primary;
   }
 }
 
