--- a/src/components/Cart/cart.module.scss
+++ b/src/components/Cart/cart.module.scss
@@ -6,6 +6,11 @@
     width: 70vw;
   }
 
+  p {
+    font-weight: 500;
+    text-align: center;
+  }
+
   @media(max-width: 1000px) {
     width: 90vw;;
   }
