--- a/src/components/Navigation/navigation.module.scss
+++ b/src/components/Navigation/navigation.module.scss
@@ -6,7 +6,7 @@ $border: 4px solid;
   width: 100%;
   display: flex;
   padding-block: 2rem;
-  justify-content: space-around;
+  justify-content: space-evenly;
   background-color: $darker;
   align-items: center;
 
