--- a/src/components/Cart/cartItem.module.scss
+++ b/src/components/Cart/cartItem.module.scss
@@ -1,4 +1,4 @@
-@import 'src/vars';
+@import "src/vars";
 
 .cart-item {
   background-color: $darker;
@@ -14,10 +14,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 
   span {
-    margin-left: .5rem;
+    margin-left: 0.5rem;
     font-weight: 500;
     font-size: 1.2rem;
   }
@@ -40,10 +40,10 @@ p {
     font-size: 1.4rem;
     font-weight: 500;
     display: flex;
-    transition: .2s all;
+    transition: 0.2s all;
 
     &:hover {
-      background-color: transparentize($color: $primary, $amount: .75);
+      background-color: transparentize($color: $primary, $amount: 0.75);
     }
   }
 }
