--- a/src/components/Navigation/navigation.module.scss
+++ b/src/components/Navigation/navigation.module.scss
@@ -1,4 +1,4 @@
-@import 'src/vars.scss';
+@import "src/vars.scss";
 
 $border: 4px solid;
 
@@ -26,14 +26,14 @@ $border: 4px solid;
     border: $border $primary;
     font-size: 1.5rem;
     cursor: pointer;
-    transition: .3s all;
+    transition: 0.3s all;
     font-weight: 500;
 
     .cartItems {
-      padding: 0 .5rem;
+      padding: 0 0.5rem;
       border: 2px dashed lighten($color: $primary, $amount: 30);
       color: lighten($color: $primary, $amount: 30);
-      transition: .3s all;
+      transition: 0.3s all;
     }
 
     &:hover {
