--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-@import 'src/vars';
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+@import "src/vars";
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
   margin: 0;
 }
@@ -12,7 +14,9 @@ body {
   color: #eee;
 }
 
-button, input, select {
+button,
+input,
+select {
   font-family: $font;
   color: #eee;
 }
