--- a/src/vars.scss
+++ b/src/vars.scss
@@ -1,5 +1,8 @@
-$font: 'Poppins', sans-serif;
-$primary: #FB2576;
+$font: "Poppins", sans-serif;
+$primary: #fb2576;
 $dark: #222;
-$darker: darken($color: $dark, $amount: 3);
+$darker: darken(
+  $color: $dark,
+  $amount: 3,
+);
 $bright: #eee;
