--- a/src/components/Navigation/navigation.module.scss
+++ b/src/components/Navigation/navigation.module.scss
@@ -9,6 +9,7 @@ $border: 4px solid;
   justify-content: space-evenly;
   background-color: $darker;
   align-items: center;
+  position: relative;
 
   h1 {
     font-size: 2.7rem;
